# smallstring

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  README.md  benchmark_main.cpp
benchmark/: CMakeLists.txt  benchmark_main.cpp
include/: smallstring.hpp
regression/: CMakeLists.txt  string_test.cc
unit/: CMakeLists.txt  advanced_coverage_test.cpp  allocator_test.cpp  boundary_test.cpp  comparison_test.cpp  conversion_test.cpp  core_methods_test.cpp  coverage_improvement_test.cpp  edge_cases_test.cpp  empty_test.cpp  iterator_advanced_test.cpp  manipulation_test.cpp  maximum_coverage_test.cpp  null_termination_test.cpp  short_test.cpp  static_assign_test.cpp  string_operations_test.cpp  string_search_test.cpp  test_iterator.cpp
